# django-poll-app

./: .gitignore  README.md  db.sqlite3  pyproject.toml  requirements.txt
polls/: admin.py  models.py  tests.py  views.py
polls/migrations/: 0001_initial.py
polls/static/polls/: style.css
polls/templates/polls/: detail.html  index.html  results.html
pollsite/: settings.py
