[tool.poetry]
name = "django-poll-app"
version = "0.1.0"
description = ""
authors = ["sharknoise <sharknoise@gmail.com>"]

[tool.poetry.dependencies]
python = "3.8.2"
django = "^3.0.8"
psycopg2-binary = "^2.8.5"
django-bootstrap4 = "^2.2.0"
isort = "4.3.21"
gunicorn = "^20.0.4"

[tool.poetry.dev-dependencies]
wemake-python-styleguide = "^0.14.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
